# bigraph-of-the-world

./: .gitignore  8-1481934-Dover.json  LICENSE  README.md  bigraph-of-the-world.opam  bigraph-of-the-world.opam.template  bigraph_of_the_world.opam  bigraph_of_the_world.opam.template  cambridge.dot  cambridgeshire.dot  dune-project  dune-workspace  perf.data.old  querytime.txt
data/: 10-10041352-Neuwerk.osm  10-110101-Borgfelde.osm  10-110113-Waidmannslust.osm  10-110126-Charlottenburg.osm  10-110476-St. Georg.osm  10-110485-Altstadt.osm  10-11365097-Murrayfield.osm  10-11657628-Crossgates and Mossgreen.osm  10-11657631-Auchtertool.osm  10-12080467-Schlachtensee.osm  10-12716620-Northstowe.osm  10-14164494-Central Dunfermline.osm  10-1425371-Ringway.osm  10-14393004-Del Mar Heights.osm  10-14393005-Otay Mesa.osm  10-14393006-San Ysidro.osm  10-14393161-Ocean View Hills.osm  10-14393162-Palm City.osm  10-14393163-Otay Mesa West.osm  10-14393164-Nestor.osm  10-14393165-Egger Highlands.osm  10-14393230-Gaslamp Quarter.osm  10-14393231-Marina.osm  10-14393232-Little Italy.osm  10-14393233-Cortez Hill.osm  10-14393234-East Village.osm  10-14393235-Core-Columbia.osm  10-1455334-Neuallermöhe.osm  10-1455385-Hamm.osm  10-151937-Grünau.osm  10-151950-Schmöckwitz.osm  10-15509577-Neudorf-Musau.osm  10-15509578-Hautepierre.osm  10-15509579-Koenigshoffen.osm  10-15509580-Cronenbourg.osm  10-15509581-Tribunal-Gare-Porte de Schirmeck.osm  10-15509582-Centre.osm  10-15509583-Montagne Verte.osm  10-15509584-Elsau.osm  10-15509585-Meinau.osm  (+961 more)
experiments/: experiment_results_build.csv  experiment_results_build_BitIntSet.csv  experiment_results_dfs_trans.csv  experiment_results_load.csv  experiment_results_naive_trans copy 2.csv  experiment_results_naive_trans copy.csv  experiment_results_naive_trans.csv  experiment_results_reactions.csv  experiment_results_reactions_Dover.csv  parse_json_names.py  plot_experiments.py  plot_results copy.ipynb  plot_results.ipynb  run_experiment.py
lib/: bigraphBuilding.ml  bigraph_building.ml  builder.ml  builder.mli  dune  examples.ml  hierarchy.ml  hierarchy.mli  overpass.ml  overpass.mli  query-raw.overpassql
output/: 10-2604777-Dover.json  5-10264792-Hong Kong Island.json  6-51800-City of London.json  8-1481934-Dover.dot  8-1481934-Dover.json  8-1481934-Dover_pp.json  8-1544956-Mountain View.json  8-295349-Fenland.json  8-295352-East Cambridgeshire.json  8-71033-Strasbourg.json
renders/: 10-1609095-Whittlesey.dot  10-1609095-Whittlesey_agent.dot  10-1609095-Whittlesey_agent2.dot  10-1609095-Whittlesey_agent4.dot  after.dot  (+11 more)
(+599 files in other folders)
