(lang dune 3.17)

(name bigraph_of_the_world)

(generate_opam_files true)

(source
 (github royangkr/bigraph_of_the_world))

(authors "Roy Ang")

(maintainers "Roy Ang")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bigraph_of_the_world)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
